# gong-rs

./: CONTRIBUTE.md  Cargo.toml  README.md  generate.sh
.github/workflows/: publish.yml
.openapi-generator/: FILES
docs/: Actor.md  AggregateActivityWithDates.md  Answer.md  AnsweredScorecard.md  AnsweredScorecards.md  AssignFlowRequestV2.md  AssignFlowResponse.md  AuditingApi.md  CallAccessDetails.md  CallBasicData.md  CallContent.md  CallContextDto.md  CallData.md  CallHighlightsItem.md  CallHighlightsSection.md  CallKeyPoint.md  CallOutcome.md  CallOutlineItem.md  CallOutlineSection.md  CallParticipant.md  CallReference.md  CallTranscript.md  CallTranscripts.md  CallUploadContext.md  Calls.md  CallsAccessDetailsResponse.md  CallsApi.md  CallsResponse.md  CallsUsersAccessAddDto.md  CallsUsersAccessDeleteDto.md  CoachingApi.md  CoachingMetrics.md  CoachingMetricsData.md  CoachingRepData.md  CoachingUser.md  CollaborationDto.md  Company.md  CompanyUsersAggregateActivityResponse.md  CompanyUsersIntercationStatsResponse.md  Content.md  (+97 more)
spec/: openapi.json
src/apis/: auditing_api.rs  calls_api.rs  coaching_api.rs  configuration.rs  crm_api.rs  data_privacy_api.rs  digital_interactions_api.rs  engage_flows_api.rs  engagement_legacy_see_digital_interactions_api.rs  integration_settings_api.rs  library_api.rs  meetings_in_beta_phase_api.rs  mod.rs  permissions_api.rs  settings_api.rs  stats_api.rs  users_api.rs
src/models/: actor.rs  aggregate_activity.rs  aggregate_activity_with_dates.rs  answer.rs  answered_scorecard.rs  answered_scorecards.rs  assign_flow_response.rs  (+189 more)
