[package]
name = "gong-rs"
version = "0.0.1"
authors = ["mail@cedric-ziel.com"]
description = "A gong.io API client for the Rust language"
license = "Apache-2.0"
edition = "2021"
homepage = "https://github.com/cedricziel/gong-rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
